gitignore added commit

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -170,7 +170,7 @@
             Python Flask & MYSQL
           </a>
           <span class="mb-3 mb-md-0 text-muted">&copy; 2022 </span>
-          <a href=""> source code </a>
+          <a href="https://github.com/sanjay493/rmg.git"> source code  </a>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
