--- a/website/templates/annual_Plant_Mines.html
+++ b/website/templates/annual_Plant_Mines.html
@@ -2,9 +2,9 @@
 %}
 
 <div class="container">
-  <h3 align="center">
+  <p align="center">
     I/Ore Production & Despatch, Hotmetal & Sinter Production
-  </h3>
+  </p>
   <div class="table-responsive">
     <table class="table table-striped table-sm">
       <thead>
