--- a/website/templates/custom_mines_monthly.html
+++ b/website/templates/custom_mines_monthly.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %} {% block title %}Mines Monthly{% endblock %} {% block
 content %}
 
-<h3 align="center">
+<p align="center">
   Get Mines Monthly Production & Despatch Data for April-13 Onward.
-</h3>
+</p>
 
 <!-- Example single danger button -->
 <div>Select a unit to get Monthly Production Despatch data</div>
