--- a/website/static/css/login.css
+++ b/website/static/css/login.css
@@ -1,11 +1,13 @@
 
 
 
-
 body {
-  height: 100%;
+  height: 100vh;
   align-items: center;
   background-color: #f5f5f5;
+  margin-top:70px;
+  padding: 20px 15px 0;
+  
 }
 
 .form-signin {
@@ -41,14 +43,3 @@ body {
 }
 
 
-.bd-navbar {
-  padding: .75rem 0;
-  background-color: #7952b3;
-}
-.custom-white{
-  
-color: rgba(255,255,255,0.1) !important;
-}
-.shadow-sm {
-  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
-}
