--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,25 +1,14 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-%}
-<main class="form-signin w-100 m-auto">
-  <form method="POST">
-    <h1 class="h3 mb-3 fw-normal">Login</h1>
-    <div class="form-group">
-      <label for="email">Email Address</label>
-      <input type="email" class="form-control" id="email" name="email" />
-    </div>
+%}{% from "_render_templates.html" import render_login_form_field %}
+<main class="form-signin w-100 m-auto shadow-sm py-3">
+  <h4 class="text-center">Login</h4>
+  <form method="POST" action="{{ url_for('auth.login') }}" novalidate>
+    {{ form.csrf_token }}
+    <div class="col-6">{{ render_login_form_field(form.email )}}</div>
 
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password"
-        name="password"
-      />
-    </div>
+    <div class="col-6">{{ render_login_form_field(form.password )}}</div>
 
-    <br />
-    <button type="submit" class="w-100 btn btn-lg btn-primary">Login</button>
+    <input class="btn btn-primary" type="submit" value="submit" />
   </form>
 </main>
 
