--- a/website/templates/yrly_cust_mines_suppply.html
+++ b/website/templates/yrly_cust_mines_suppply.html
@@ -1,62 +1,38 @@
-{% extends "base.html" %} {% block title %}Mines Supply Plant wise Share{%
+{% extends "base.html" %} {% block title %}Plant Annual Supply Mines Wise {%
 endblock %} {% block content %}
 
-<p align="center">Mines Monthly Supply customer wise %share</p>
+<h3 align="center">Plant Annual Supply Mines Wise ( & %Share)</h3>
 
 <!-- Example single danger button -->
-<div>Select a unit to get Monthly Plant wise Despatch</div>
+<div>Select a Plant to get Annual Supply Mines wise</div>
 
 <div class="container">
   <form
     class="row gy-2 gx-3 align-items-center"
-    action="{{ url_for('views.mthly_cust_wise_suppply') }}"
+    action="{{ url_for('views.yrly_cust_mines_suppply') }}"
     method="POST"
   >
     <div class="col-auto">
       <label class="visually-hidden" for="autoSizingSelect">Select Unit</label>
-      <select class="form-select" id="autoSizingSelect" name="unit">
+      <select class="form-select" id="autoSizingSelect" name="cust">
         <option selected>Choose...</option>
         <option value="SAIL">SAIL</option>
-        <option value="OGOM">Odisha Group of Mines</option>
-        <option value="JGOM">Jharkhand Group of Mines</option>
-        <option value="BGM">Bhilai Group of Mines</option>
-        <option value="BOL">Bolani</option>
-        <option value="BAR">Barsua</option>
-        <option value="TAL">Taldih</option>
-        <option value="KAL">Kalta</option>
-        <option value="KRB">Kiriburu</option>
-        <option value="MBR">Meghahatuburu</option>
-        <option value="GUA">Gua</option>
-        <option value="MPR">Chiria</option>
+        <option value="BSL">BSL</option>
+        <option value="DSP">DSP</option>
+        <option value="RSP">RSP</option>
+        <option value="ISP">ISP</option>
+        <option value="BSP">BSP</option>
       </select>
     </div>
     <div class="col-auto">
       <label class="visually-hidden" for="autoSizingSelect"
-        >Select commodity</label
+        >Select Commodity</label
       >
       <select class="form-select" id="autoSizingSelect" name="comm1">
         <option selected>Choose...</option>
         <option value="L">Lump</option>
         <option value="F">Fines</option>
       </select>
-    </div>
-    <div class="col-auto">
-      <input
-        type="text"
-        class="form-control"
-        id="yymm1"
-        placeholder="From month in YYYYMM format"
-        name="yymm1"
-      />
-    </div>
-    <div class="col-auto">
-      <input
-        type="text"
-        class="form-control"
-        id="yymm2"
-        placeholder="To month in YYYYMM format"
-        name="yymm2"
-      />
     </div>
     <div class="col-auto">
       <button type="submit" class="btn btn-primary">Submit</button>
@@ -77,25 +53,29 @@ endblock %} {% block content %}
   'name' : 'IISCO Steel Plant', 'id' : 'ISP'},{ 'name' : 'Jharkhand Group of
   Mines', 'id' : 'JGOM'},{ 'name' : 'SAIL', 'id' : 'SAIL'},{ 'name' : 'Odisha
   Group of Mines', 'id' : 'OGOM'} ] %}
+
   <div class="table-responsive">
     <table class="table table-striped table-sm">
       <thead>
         <tr>
           <th colspan="8" class="align-middle text-end">
-            {% for item in U_Name %}{% if item.id==unit %}{{ item.name }} {%
+            {% for item in U_Name %}{% if item.id==cust %}{{ item.name }} {%
             endif %}{% endfor %}
           </th>
+          <th>{{comm}}</th>
         </tr>
         <tr class="bg-primary">
-          <th class="align-middle text-center">Month</th>
-          <th class="align-middle text-center bg-light">Total Despatch</th>
-          <th class="align-middle text-center">BSL</th>
-          <th class="align-middle text-center">DSP</th>
-          <th class="align-middle text-center">RSP</th>
-          <th class="align-middle text-center">ISP</th>
-          <th class="align-middle text-center">BSP</th>
-          <th class="align-middle text-center">PEL</th>
-          <th class="align-middle text-center">Others</th>
+          <th class="align-middle text-center">Financial Year</th>
+          <th class="align-middle text-center">Total Supply</th>
+          <th class="align-middle text-center">Bolani</th>
+          <th class="align-middle text-center">Barsua</th>
+          <th class="align-middle text-center">Taldih</th>
+          <th class="align-middle text-center">Kalta</th>
+          <th class="align-middle text-center">Kiriburu</th>
+          <th class="align-middle text-center">Meghahatuburu</th>
+          <th class="align-middle text-center">Gua</th>
+          <th class="align-middle text-center">Chiria</th>
+          <th class="align-middle text-center">Bhilai Mines</th>
         </tr>
       </thead>
       <tbody>
@@ -130,6 +110,14 @@ endblock %} {% block content %}
           <td class="text-center">
             {{ data[14] }}
             <p>{{ data[15] }}</p>
+          </td>
+          <td class="text-center">
+            {{ data[16] }}
+            <p>{{ data[17] }}</p>
+          </td>
+          <td class="text-center">
+            {{ data[18] }}
+            <p>{{ data[19] }}</p>
           </td>
         </tr>
         {% endfor %}
