--- a/website/templates/yrly_cust_wise_suppply.html
+++ b/website/templates/yrly_cust_wise_suppply.html
@@ -1,15 +1,15 @@
-{% extends "base.html" %} {% block title %}Mines Supply Plant wise Share{%
+{% extends "base.html" %} {% block title %}Mines Annual Supply Customer Wise{%
 endblock %} {% block content %}
 
-<p align="center">Mines Monthly Supply customer wise %share</p>
+<h3 align="center">Mines Annual Supply Customer Wise ( & %Share)</h3>
 
 <!-- Example single danger button -->
-<div>Select a unit to get Monthly Plant wise Despatch</div>
+<div>Select a unit to get Annual Supply data Plant wise</div>
 
 <div class="container">
   <form
     class="row gy-2 gx-3 align-items-center"
-    action="{{ url_for('views.mthly_cust_wise_suppply') }}"
+    action="{{ url_for('views.yrly_cust_wise_suppply') }}"
     method="POST"
   >
     <div class="col-auto">
@@ -32,31 +32,13 @@ endblock %} {% block content %}
     </div>
     <div class="col-auto">
       <label class="visually-hidden" for="autoSizingSelect"
-        >Select commodity</label
+        >Select Commodity</label
       >
       <select class="form-select" id="autoSizingSelect" name="comm1">
         <option selected>Choose...</option>
         <option value="L">Lump</option>
         <option value="F">Fines</option>
       </select>
-    </div>
-    <div class="col-auto">
-      <input
-        type="text"
-        class="form-control"
-        id="yymm1"
-        placeholder="From month in YYYYMM format"
-        name="yymm1"
-      />
-    </div>
-    <div class="col-auto">
-      <input
-        type="text"
-        class="form-control"
-        id="yymm2"
-        placeholder="To month in YYYYMM format"
-        name="yymm2"
-      />
     </div>
     <div class="col-auto">
       <button type="submit" class="btn btn-primary">Submit</button>
@@ -77,6 +59,7 @@ endblock %} {% block content %}
   'name' : 'IISCO Steel Plant', 'id' : 'ISP'},{ 'name' : 'Jharkhand Group of
   Mines', 'id' : 'JGOM'},{ 'name' : 'SAIL', 'id' : 'SAIL'},{ 'name' : 'Odisha
   Group of Mines', 'id' : 'OGOM'} ] %}
+
   <div class="table-responsive">
     <table class="table table-striped table-sm">
       <thead>
@@ -85,17 +68,18 @@ endblock %} {% block content %}
             {% for item in U_Name %}{% if item.id==unit %}{{ item.name }} {%
             endif %}{% endfor %}
           </th>
+          <th>{{comm}}</th>
         </tr>
         <tr class="bg-primary">
-          <th class="align-middle text-center">Month</th>
-          <th class="align-middle text-center bg-light">Total Despatch</th>
+          <th class="align-middle text-center">Financial Year</th>
+          <th class="align-middle text-center">Total Supply</th>
           <th class="align-middle text-center">BSL</th>
           <th class="align-middle text-center">DSP</th>
           <th class="align-middle text-center">RSP</th>
           <th class="align-middle text-center">ISP</th>
           <th class="align-middle text-center">BSP</th>
-          <th class="align-middle text-center">PEL</th>
-          <th class="align-middle text-center">Others</th>
+          <th class="align-middle text-center">To Pellets</th>
+          <th class="align-middle text-center">Sales</th>
         </tr>
       </thead>
       <tbody>
